hphp/test/zend/bad/ext/mysql/tests/mysql_query_load_data_openbasedir.php.skipif
<?php
include_once('skipif.inc');
include_once('skipifconnectfailure.inc');


if (!$IS_MYSQLND)
	die("skip mysqlnd only, libmysql does not know about open_basedir restrictions");

if (file_exists('./simple.csv') && !unlink('./simple.csv'))
	die("skip Cannot remove previous CSV file");

if (!$fp = fopen('./simple.csv', 'w'))
	die("skip Cannot create test CSV file");

fclose($fp);
@unlink('./simple.csv');

if ($socket == "" && $host != NULL && $host != 'localhost' && $host != '.') {
	/* could be a remote TCP/IP connection. LOCAL INFILE may not work */
	if (gethostbyaddr($host) != gethostname()) {
		die("skip LOAD DATA LOCAL INFILE will fail if connecting to remote MySQL");
	}
}
?>